title fix and footer spacing

--- a/assets/sass/layout/_footer.scss
+++ b/assets/sass/layout/_footer.scss
@@ -25,7 +25,7 @@
     &__links {
         list-style: none;
         padding: unset;
-        margin-bottom:$spacing-base-8;
+        margin-bottom:$spacing-base-5;
             
         li {
             padding-bottom: 8px;
